--- a/package.json
+++ b/package.json
@@ -17,25 +17,26 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,mjs,json,jsx,html,css}\""
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.15.0",
     "@ws-ui/craftjs-core": "^0.2.5",
     "@ws-ui/craftjs-layers": "^0.2.2",
     "@ws-ui/craftjs-utils": "^0.2.1",
-    "@ws-ui/webform-editor": "0.2.13",
+    "@ws-ui/webform-editor": "0.2.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@qodly/cli": "^0.1.40",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^8.56.0",
+    "@qodly/cli": "^0.1.44",
+    "@types/react": "^18.2.70",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.12"
+    "typescript": "^5.4.3",
+    "vite": "^5.2.6"
   }
 }
