--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,mjs,json,jsx,html,css}\""
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@tanstack/react-table": "^8.15.0",
     "@ws-ui/craftjs-core": "^0.2.5",
     "@ws-ui/craftjs-layers": "^0.2.2",
