--- a/package.json
+++ b/package.json
@@ -16,6 +16,16 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write \"**/*.{ts,tsx,js,mjs,json,jsx,html,css}\""
   },
+  "overrides": {
+    "@ws-ui/webform-editor": {
+      "@ws-ui/code-editor": "0.1.21",
+      "@ws-ui/craftjs-core": "0.2.5",
+      "@ws-ui/craftjs-layers": "0.2.2",
+      "@ws-ui/craftjs-utils": "0.2.1",
+      "@ws-ui/icons": "0.0.16",
+      "@ws-ui/store": "0.1.26"
+    }
+  },
   "dependencies": {
     "@dnd-kit/core": "^5.0.1",
     "@dnd-kit/modifiers": "^5.0.0",
@@ -26,11 +36,12 @@
     "@ws-ui/craftjs-layers": "^0.2.2",
     "@ws-ui/craftjs-utils": "^0.2.1",
     "@ws-ui/webform-editor": "0.2.25",
+    "@ws-ui/shared": "0.1.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@qodly/cli": "^0.1.45",
+    "@qodly/cli": "^0.2.2",
     "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
