--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "@dnd-kit/sortable": "^6.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@tanstack/react-table": "^8.16.0",
-    "@ws-ui/craftjs-core": "^0.2.5",
-    "@ws-ui/craftjs-layers": "^0.2.2",
-    "@ws-ui/craftjs-utils": "^0.2.1",
-    "@ws-ui/webform-editor": "0.2.25",
+    "@ws-ui/craftjs-core": "0.2.5",
+    "@ws-ui/craftjs-layers": "0.2.2",
+    "@ws-ui/craftjs-utils": "0.2.1",
+    "@ws-ui/webform-editor": "0.2.13",
     "@ws-ui/shared": "0.1.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
