--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "app_id": "qodly_4800eb8c1261764dafb9",
-  "name": "qodly_table",
+  "name": "qodly_datagrid",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.4.0",
   "type": "module",
   "author": {
-    "name": "Qodly Team",
-    "email": "contact@qodly.com",
+    "name": "Ayoub METWALLI",
+    "email": "ayoub@qodly.com",
     "url": "https://qodly.com"
   },
   "scripts": {
@@ -18,13 +18,19 @@
   },
   "overrides": {
     "@ws-ui/webform-editor": {
-      "@ws-ui/code-editor": "0.2.0",
-      "@ws-ui/craftjs-core": "0.2.9",
+      "@ws-ui/code-editor": "0.2.3",
+      "@ws-ui/icons": "0.0.21",
+      "@ws-ui/shared": "0.2.3",
+      "@ws-ui/store": "0.2.4",
+      "@ws-ui/craftjs-core": "0.2.11",
       "@ws-ui/craftjs-layers": "0.2.4",
-      "@ws-ui/craftjs-utils": "0.2.2",
-      "@ws-ui/icons": "0.0.20",
-      "@ws-ui/shared": "0.2.0",
-      "@ws-ui/store": "0.2.1"
+      "@ws-ui/craftjs-utils": "0.2.2"
+    },
+    "@ws-ui/store": {
+      "@ws-ui/icons": "0.0.21"
+    },
+    "@ws-ui/shared": {
+      "@ws-ui/icons": "0.0.21"
     }
   },
   "dependencies": {
@@ -38,7 +44,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@qodly/cli": "^0.2.8",
+    "@qodly/cli": "^0.2.10",
     "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
